@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.5.7
+VERSION=1.5.8
 
-DEPENDENCY="zeda=1.2.30;zm=1.2.19"
+DEPENDENCY="zeda=1.3.1;zm=1.2.19"
